--- a/source/less/global/commons.less
+++ b/source/less/global/commons.less
@@ -1,5 +1,6 @@
 html,
 body {
+  min-width: 320px;
   margin: 0;
   padding: 0;
 
@@ -31,4 +32,16 @@ input[type="radio"].visually-hidden {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+BODY > * {
+    outline: 2px solid deeppink;
+}
+BODY > * > * {
+    outline: 2px dashed lime;
+    outline-offset: -2px;
+}
+BODY > * > * > * {
+    outline: 2px dotted dodgerblue;
+    outline-offset: -4px;
 }
