--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,1 +1,18 @@
+.catalog__list {
+  .reset-list;
+}
 
+.card-product__heading {
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 200;
+  color: #111111;
+}
+
+.card-product__product-characteristics {
+  font-family: @ffam-content;
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 200;
+  color: #444444;
+}
