Добавляет базовую стилизацию ещёкалки и дополнительных товаров на странице каталога

--- a/source/less/blocks/more-products.less
+++ b/source/less/blocks/more-products.less
@@ -1,1 +1,22 @@
+.more-product__all-goods {
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 200;
+  color: #111111;
+  text-transform: uppercase;
+}
 
+.more-product__slogan {
+  font-family: @ffam-content;
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 200;
+  color: #444444;
+}
+
+.more-product__button {
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 200;
+  color: #222222;
+}
