--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -1,1 +1,26 @@
+.additional-products__title {
+  font-size: 24px;
+  line-height: 24px;
+  font-weight: 200;
+  color: #111111;
+}
 
+.additional-products__list {
+  .reset-list;
+}
+
+.additional-products__heading {
+  font-size: 16px;
+  line-height: 16px;
+  font-weight: 200;
+  color: #222222;
+  text-transform: uppercase;
+}
+
+.additional-products__characteristics {
+  font-family: @ffam-content;
+  font-size: 14px;
+  line-height: 14px;
+  font-weight: 200;
+  color: #444444;
+}
