Добавляет базовые стили блоку акции на странице каталога

--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -1,5 +1,14 @@
 .promo {
+  background-color: #68b738;
   background-image: url(../img/gift-photo-mobile@1x.jpg);
   background-repeat: no-repeat;
   background-position: center;
+}
+
+.promo__slogan {
+  font-family: @ffam-content;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 200;
+  color: #ffffff;
 }
