Добавляет базовую стилизацию формы

--- a/source/less/blocks/picking-program.less
+++ b/source/less/blocks/picking-program.less
@@ -1,1 +1,44 @@
+.picking-program__text {
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 200;
+  color: #111111;
+  text-transform: uppercase;
+}
 
+.picking-program__list {
+  .reset-list;
+}
+
+.picking-program__fieldset {
+  border: none;
+}
+
+.picking-program__legend {
+  font-size: 24px;
+  line-height: 24px;
+  font-weight: 200;
+  color: #111111;
+}
+
+.picking-program__button {
+  border: none;
+}
+
+.picking-program__input-text::placeholder,
+.picking-program__textarea::placeholder {
+  font-family: @ffam-base;
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 200;
+  color: #444444;
+  text-transform: uppercase;
+}
+
+.picking-program__footnote {
+  font-family: @ffam-content;
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: 200;
+  color: #444444;
+}
