Добавляет цвета в переменные, вызову миксинов скобки, изменяет названия переменных семества шрифтов, убирает модификатор грин у кнопки

--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,14 +1,11 @@
 .button {
-  font-family: @ffam-base;
+  font-family: @font-family-base;
   text-transform: uppercase;
-}
-
-.button--theme-green {
-  color: #ffffff;
-  background-color: #68b738;
+  color: @color-white;
+  background-color: @color-green;
 }
 
 .button--theme-grey {
-  color: #111111;
+  color: @color-black;
   background-color: #f2f2f2;
 }
