--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,18 +1,18 @@
 .catalog__list {
-  .reset-list;
+  .reset-list();
 }
 
 .card-product__heading {
   font-size: 16px;
   line-height: 20px;
   font-weight: 200;
-  color: #111111;
+  color: @color-black;
 }
 
 .card-product__product-characteristics {
-  font-family: @ffam-content;
+  font-family: @font-family-content;
   font-size: 12px;
   line-height: 16px;
   font-weight: 200;
-  color: #444444;
+  color: @color-grey;
 }
