--- a/source/less/blocks/cooperation.less
+++ b/source/less/blocks/cooperation.less
@@ -2,13 +2,14 @@
   font-size: 16px;
   line-height: 20px;
   font-weight: 200;
+  color: @color-black;
   text-transform: uppercase;
 }
 
 .cooperation__adds {
-  font-family: @ffam-content;
+  font-family: @font-family-content;
   font-size: 14px;
   line-height: 20px;
   font-weight: 200;
-  color: #444444;
+  color: @color-grey;
 }
