--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,9 +1,9 @@
 .copyright__text {
-  font-family: @ffam-content;
+  font-family: @font-family-content;
   font-size: 16px;
   line-height: 16px;
   font-weight: 200;
-  color: #444444;
+  color: @color-grey;
 }
 
 .copyright__link {
