--- a/source/less/blocks/how-it-works.less
+++ b/source/less/blocks/how-it-works.less
@@ -1,12 +1,12 @@
 .how-it-works__heading {
-  .title;
+  .title();
 }
 
 .how-it-works__list{
-  .reset-list;
+  .reset-list();
 }
 
 .how-it-works__item {
-  font-family: @ffam-content;
-  .content-font;
+  .content-font();
+  font-family: @font-family-content;
 }
