--- a/source/less/blocks/picking-program.less
+++ b/source/less/blocks/picking-program.less
@@ -2,12 +2,12 @@
   font-size: 14px;
   line-height: 18px;
   font-weight: 200;
-  color: #111111;
+  color: @color-black;
   text-transform: uppercase;
 }
 
 .picking-program__list {
-  .reset-list;
+  .reset-list();
 }
 
 .picking-program__fieldset {
@@ -18,7 +18,7 @@
   font-size: 24px;
   line-height: 24px;
   font-weight: 200;
-  color: #111111;
+  color: @color-black;
 }
 
 .picking-program__button {
@@ -31,7 +31,7 @@
   font-size: 16px;
   line-height: 18px;
   font-weight: 200;
-  color: #444444;
+  color: @color-grey;
   text-transform: uppercase;
 }
 
@@ -40,5 +40,5 @@
   font-size: 14px;
   line-height: 16px;
   font-weight: 200;
-  color: #444444;
+  color: @color-grey;
 }
