--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -1,2 +1,7 @@
-@ffam-base: "Oswald", "Tahoma", sans-serif;
-@ffam-content: "Arial", "Helvetica", sans-serif;
+@font-family-base: "Oswald", "Tahoma", sans-serif;
+@font-family-content: "Arial", "Helvetica", sans-serif;
+@color-black: #111111;
+@color-grey: #444444;
+@color-white: #ffffff;
+@color-green: #68b738;
+@color-light-grey: #f2f2f2;
