--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,8 +1,10 @@
+@import "../css/normalize.css";
 @import "global/fonts";
 @import "global/commons";
 @import "global/variables";
 @import "global/mixins";
 @import "blocks/button";
+@import "blocks/label";
 @import "blocks/page-header";
 @import "blocks/main-nav";
 @import "blocks/site-list";
