--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -2,11 +2,11 @@
   font-size: 24px;
   line-height: 24px;
   font-weight: 200;
-  color: #111111;
+  color: @color-black;
 }
 
 .additional-products__list {
-  .reset-list;
+  .reset-list();
 }
 
 .additional-products__heading {
@@ -18,9 +18,9 @@
 }
 
 .additional-products__characteristics {
-  font-family: @ffam-content;
+  font-family: @font-family-content;
   font-size: 14px;
   line-height: 14px;
   font-weight: 200;
-  color: #444444;
+  color: @color-grey;
 }
