--- a/source/less/blocks/more-products.less
+++ b/source/less/blocks/more-products.less
@@ -2,16 +2,16 @@
   font-size: 16px;
   line-height: 20px;
   font-weight: 200;
-  color: #111111;
+  color: @color-black;
   text-transform: uppercase;
 }
 
 .more-product__slogan {
-  font-family: @ffam-content;
+  font-family: @font-family-content;
   font-size: 12px;
   line-height: 16px;
   font-weight: 200;
-  color: #444444;
+  color: @color-grey;
 }
 
 .more-product__button {
