--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -6,9 +6,9 @@
 }
 
 .promo__slogan {
-  font-family: @ffam-content;
+  font-family: @font-family-content;
   font-size: 16px;
   line-height: 20px;
   font-weight: 200;
-  color: #ffffff;
+  color: @color-white;
 }
