--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,11 +1,11 @@
 .site-list {
-  .reset-list;
+  .reset-list();
 }
 
 .site-list__link {
   font-size: 20px;
   line-height: 20px;
   font-weight: 400;
-  color: #111111;
+  color: @color-black;
   text-transform: uppercase;
 }
