--- a/source/less/global/commons.less
+++ b/source/less/global/commons.less
@@ -3,7 +3,6 @@ body {
   min-width: 320px;
   margin: 0;
   padding: 0;
-
   font-family: "Oswald", "Arial", sans-serif;
 }
 
@@ -20,20 +19,17 @@ img {
 input[type="checkbox"].visually-hidden,
 input[type="radio"].visually-hidden {
   position: absolute;
-
   width: 1px;
   height: 1px;
   margin: -1px;
   border: 0;
   padding: 0;
-
   white-space: nowrap;
-
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-
+//временно обводки для сетки
 BODY > * {
     outline: 2px solid deeppink;
 }
