Правки по линтеру

--- a/source/less/global/commons.less
+++ b/source/less/global/commons.less
@@ -30,14 +30,16 @@ input[type="radio"].visually-hidden {
   overflow: hidden;
 }
 //временно обводки для сетки
-BODY > * {
-    outline: 2px solid deeppink;
+body > * {
+  outline: 2px solid deeppink;
 }
-BODY > * > * {
-    outline: 2px dashed lime;
-    outline-offset: -2px;
+
+body > * > * {
+  outline: 2px dashed lime;
+  outline-offset: -2px;
 }
-BODY > * > * > * {
-    outline: 2px dotted dodgerblue;
-    outline-offset: -4px;
+
+body > * > * > * {
+  outline: 2px dotted dodgerblue;
+  outline-offset: -4px;
 }
