--- a/source/less/blocks/program-banner.less
+++ b/source/less/blocks/program-banner.less
@@ -1,6 +1,6 @@
 .program-banner {
   background-color: #65a93c;
-  background-image: url(../img/index-background-mobile@1x.jpg);
+  background-image: url("../img/index-background-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -9,14 +9,14 @@
   font-size: 36px;
   line-height: 36px;
   font-weight: 200;
-  color: #ffffff;
+  color: @color-white;
 }
 
 .program-banner__slogan {
   font-size: 14px;
   line-height: 14px;
   font-weight: 200;
-  color: #ffffff;
+  color: @color-white;
   text-transform: uppercase;
 }
 
@@ -24,6 +24,5 @@
   font-size: 14px;
   line-height: 18px;
   font-weight: 200;
-
   padding: 11px 72px;
 }
