--- a/source/less/blocks/picking-program.less
+++ b/source/less/blocks/picking-program.less
@@ -27,7 +27,7 @@
 
 .picking-program__input-text::placeholder,
 .picking-program__textarea::placeholder {
-  font-family: @ffam-base;
+  font-family: @font-family-base;
   font-size: 16px;
   line-height: 18px;
   font-weight: 200;
@@ -36,7 +36,7 @@
 }
 
 .picking-program__footnote {
-  font-family: @ffam-content;
+  font-family: @font-family-content;
   font-size: 14px;
   line-height: 16px;
   font-weight: 200;
