Добавляет сетку блоков program-banner и categories

--- a/source/less/blocks/categories.less
+++ b/source/less/blocks/categories.less
@@ -2,6 +2,12 @@
   .reset-list();
 }
 
+@media (min-width: @desktop-width) {
+  .categories__list {
+    display: flex;
+  }
+}
+
 .categories__item {
   background-color: @color-light-grey;
 }
