--- a/source/less/blocks/how-it-works.less
+++ b/source/less/blocks/how-it-works.less
@@ -1,3 +1,10 @@
+@media (min-width: @tablet-width) {
+  .how-it-works__list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
 .how-it-works__heading {
   .title();
 }
