Добавляет изменения в разметку блока контакты и футера, добавляет сеточные стили для этих блоков

--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,3 +1,9 @@
 .page-footer {
   background-color: @color-light-grey;
 }
+
+@media (min-width:@tablet-width) {
+  .page-footer {
+    display: flex;
+  }
+}
