--- a/source/less/style.less
+++ b/source/less/style.less
@@ -12,6 +12,7 @@
 @import "blocks/categories";
 @import "blocks/how-it-works";
 @import "blocks/real-example";
+@import "blocks/contacts";
 @import "blocks/cooperation";
 @import "blocks/page-footer";
 @import "blocks/social";
