Черновая сетка каталога

--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -17,6 +17,18 @@
   text-transform: uppercase;
 }
 
+@media (min-width: @tablet-width) {
+  .additional-products__wrapper {
+    display: flex;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .additional-products__item {
+    display: flex;
+  }
+}
+
 .additional-products__characteristics {
   font-family: @font-family-content;
   font-size: 14px;
