--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,6 +1,72 @@
+.main-nav {
+  position: relative;
+  width: 280px;
+  margin: 0 auto;
+  border-top: 1px solid #e6e6e6;
+}
+
 .main-nav__toggle {
-  border: none;
+  position: absolute;
+  top: -45px;
+  right: 2px;
+  z-index: 2;
+  display: block;
+  width: 24px;
+  height: 18px;
   background-color: @color-white;
+  cursor: pointer;
+  border: none;
+}
+
+@media (max-width: @mobile-width-only) {
+  .main-nav--closed .site-list__item {
+    display: none;
+ }
+  &--active {
+    display: block;
+  }
+}
+
+.main-nav--closed .main-nav__toggle::before {
+  content: "";
+
+  position: absolute;
+  top: 0px;
+  right: 0px;
+
+  width: 24px;
+  height: 2px;
+
+  background-color: @color-black;
+  box-shadow: 0 8px 0 0 @color-black, 0 16px 0 0 @color-black;
+}
+
+.main-nav--opened .main-nav__toggle {
+  top: -45px;
+  right: 5px;
+
+  &::before,
+  &::after {
+    content: "";
+
+    position: absolute;
+    top: 8px;
+    left: 3px;
+
+    width: 22px;
+    height: 2px;
+
+    background-color: @color-black;
+  }
+
+  &::before {
+    transform: rotate(45deg);
+    box-shadow: none;
+  }
+
+  &::after {
+    transform: rotate(-45deg);
+  }
 }
 
 @media (min-width: @tablet-width) {
