--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,10 +1,52 @@
 .page-header {
   display: flex;
   flex-direction: column;
+  width: 280px;
+  padding: 13px 20px 0 20px;
+  margin: 0 auto;
 }
 
 @media (min-width: @tablet-width) {
   .page-header {
     flex-direction: row;
+    width: 708px;
+    padding: 24px 30px 24px 30px;
   }
+}
+
+@media (min-width: @desktop-width) {
+  .page-header {
+    width: 1220px;
+    padding: 54px 110px 48px 110px;
+  }
+}
+
+.page-header__logo {
+  display: flex;
+  justify-content: space-between;
+  width: 190px;
+  padding-bottom: 16px;
+}
+
+@media (min-width: @tablet-width) {
+  .page-header__logo {
+    width: 173px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-header__logo {
+    width: 202px;
+  }
+}
+
+.page-header__logo-image-icon {
+  width: 33px;
+  height: 38px;
+}
+
+.page-header__logo-image-name {
+  width: 101px;
+  height: 18px;
+  align-self: center;
 }
