--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -3,9 +3,17 @@
 }
 
 .site-list__link {
+  display: block;
+  padding: 22px 50px 22px 50px;
   font-size: 20px;
   line-height: 20px;
   font-weight: 400;
   color: @color-black;
   text-transform: uppercase;
+  text-decoration: none;
+}
+
+.site-list__item {
+  text-align: center;
+  border-bottom: 1px solid #e6e6e6;
 }
