--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -21,7 +21,8 @@
 @media (max-width: @mobile-width-only) {
   .main-nav--closed .site-list__item {
     display: none;
- }
+  }
+
   &--active {
     display: block;
   }
@@ -29,14 +30,11 @@
 
 .main-nav--closed .main-nav__toggle::before {
   content: "";
-
   position: absolute;
-  top: 0px;
-  right: 0px;
-
+  top: 0;
+  right: 0;
   width: 24px;
   height: 2px;
-
   background-color: @color-black;
   box-shadow: 0 8px 0 0 @color-black, 0 16px 0 0 @color-black;
 }
@@ -48,14 +46,11 @@
   &::before,
   &::after {
     content: "";
-
     position: absolute;
     top: 8px;
     left: 3px;
-
     width: 22px;
     height: 2px;
-
     background-color: @color-black;
   }
 
