Добавляет скрипт для закрытия-открытия меню в мобильной версии

--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -54,6 +54,10 @@
     background-color: @color-black;
   }
 
+  .main-nav--nojs .main-nav__toggle {
+    display: none;
+  }
+
   &::before {
     transform: rotate(45deg);
     box-shadow: none;
