--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -9,6 +9,7 @@
 @media (min-width: @tablet-width) {
   .page-header {
     flex-direction: row;
+    justify-content: space-between;
     width: 708px;
     padding: 24px 30px 24px 30px;
   }
@@ -25,7 +26,7 @@
   display: flex;
   justify-content: space-between;
   width: 190px;
-  padding-bottom: 16px;
+  padding-bottom: 14px;
 }
 
 @media (min-width: @tablet-width) {
