--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -2,6 +2,15 @@
   .reset-list();
 }
 
+@media (min-width: @tablet-width) {
+  .site-list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 439px;
+  }
+}
+
 .site-list__link {
   display: block;
   padding: 22px 50px 22px 50px;
@@ -13,7 +22,30 @@
   text-decoration: none;
 }
 
+@media (min-width: @tablet-width) {
+  .site-list__link {
+    padding: 20px 0 5px 0;
+    font-size: 18px;
+    line-height: 25px;
+    font-weight: 200;
+    color: #222222;
+    border: none;
+  }
+}
+
 .site-list__item {
   text-align: center;
   border-bottom: 1px solid #e6e6e6;
+}
+
+@media (min-width: @tablet-width) {
+  .site-list__item {
+    border: none;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .site-list__item--active {
+    box-shadow: 0 2px 0 @color-green;
+  }
 }
