Сетка блок categories на мобильной версии

--- a/source/less/blocks/program-banner.less
+++ b/source/less/blocks/program-banner.less
@@ -9,6 +9,20 @@
   text-align: center;
 }
 
+@media (min-width: @tablet-width) {
+  .program-banner {
+    width: 708px;
+    padding: 0 30px 0 30px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .program-banner {
+    width: 1220px;
+    padding: 0 110px 0 110px;
+  }
+}
+
 .program-banner__heading {
   font-size: 36px;
   line-height: 36px;
