--- a/source/less/blocks/categories.less
+++ b/source/less/blocks/categories.less
@@ -1,5 +1,26 @@
+.categories {
+  width: 280px;
+  padding: 0 20px 0 20px;
+  margin: 0 auto;
+}
+
+@media (min-width: @tablet-width) {
+  .categories {
+    width: 708px;
+    padding: 0 30px 0 30px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .categories {
+    width: 1220px;
+    padding: 0 110px 0 110px;
+  }
+}
+
 .categories__list {
   .reset-list();
+  position: relative;
 }
 
 @media (min-width: @desktop-width) {
@@ -13,20 +34,91 @@
 }
 
 .categories__heading {
+  padding: 30px 0 0 91px;
   font-size: 24px;
   line-height: 37px;
   font-weight: 200;
   text-transform: uppercase;
 }
 
+.categories__heading--slim {
+  &::before {
+    content: "";
+    position: absolute;
+    top: 27px;
+    left: 22px;
+    width: 50px;
+    height: 50px;
+    background-color: @color-green;
+    border-radius: 50%;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 23px;
+    left: 22px;
+    width: 50px;
+    height: 50px;
+    background-image: url("../img/icon-cat-slim.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+}
+
+.categories__heading--pro {
+  &::before {
+    content: "";
+    position: absolute;
+    top: 310px;
+    left: 22px;
+    width: 50px;
+    height: 50px;
+    background-color: @color-green;
+    border-radius: 50%;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 320px;
+    left: 14px;
+    width: 67px;
+    height: 28px;
+    background-image: url("../img/icon-cat-pro.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+}
+
 .categories__text {
   .content-font();
+  padding: 10px 20px 0 20px;
   font-family: @font-family-content;
 }
 
-.categories__button {
+.categories-button {
+  position: relative;
+  display: block;
+  padding: 20px 0 20px 0;
+  margin: 22px 20px 0 20px;
   font-size: 16px;
   line-height: 16px;
   color: @color-black;
+  text-transform: uppercase;
+  text-decoration: none;
   background-color: @color-light-grey;
+  border-top: 1px solid #d9d9d9;
+}
+
+.categories-button::after {
+  content: "";
+  position: absolute;
+  top: 20px;
+  left: 100px;
+  width: 24px;
+  height: 11px;
+  background-image: url("../img/icon-right-arrow-long.svg");
+  background-repeat: no-repeat;
+  background-position: center;
 }
