Сетка блока как это работает на мобильной версии

--- a/source/less/global/mixins.less
+++ b/source/less/global/mixins.less
@@ -25,3 +25,15 @@
   font-weight: 200;
   color: #444444;
 }
+
+.how-it-works-icon() {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 0;
+  width: 60px;
+  height: 60px;
+  background-color: @color-green;
+  background-repeat: no-repeat;
+  background-position: center;
+}
