--- a/source/less/blocks/how-it-works.less
+++ b/source/less/blocks/how-it-works.less
@@ -1,12 +1,29 @@
+.how-it-works {
+  width: 280px;
+  padding: 0 20px 0 20px;
+  margin: 0 auto;
+}
+
 @media (min-width: @tablet-width) {
   .how-it-works__list {
     display: flex;
     flex-wrap: wrap;
+    width: 708px;
+    padding: 0 30px 0 30px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .how-it-works__list {
+    width: 1220px;
+    padding: 0 110px 0 110px;
   }
 }
 
 .how-it-works__heading {
   .title();
+  margin: 20px 0 23px 0;
+  padding: 0;
 }
 
 .how-it-works__list {
@@ -15,5 +32,28 @@
 
 .how-it-works__item {
   .content-font();
+  position: relative;
+  margin-bottom: 15px;
+  padding: 7px 5px 4px 80px;
   font-family: @font-family-content;
+}
+
+.how-it-works__item:nth-child(1)::before {
+  .how-it-works-icon();
+  background-image: url("../img/advantage-leaf@1x.png");
+}
+
+.how-it-works__item:nth-child(2)::before {
+  .how-it-works-icon();
+  background-image: url("../img/advantage-powder@1x.png");
+}
+
+.how-it-works__item:nth-child(3)::before {
+  .how-it-works-icon();
+  background-image: url("../img/advantage-dining@1x.png");
+}
+
+.how-it-works__item:nth-child(4)::before {
+  .how-it-works-icon();
+  background-image: url("../img/advantage-clock@1x.png");
 }
