--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,3 +1,22 @@
 .contacts {
   position: relative;
 }
+
+.contacts__cooperation {
+  width: 280px;
+  padding: 0 20px 0 20px;
+  margin: 0 auto;
+}
+
+@media (min-width: @tablet-width) {
+  .contacts__cooperation {
+    width: 708px;
+    padding: 0 30px 0 30px;
+    margin: 0 auto;
+  }
+}
+
+.contacts__map {
+  width: 320px;
+  margin: 0 auto;
+}
