--- a/source/less/blocks/cooperation.less
+++ b/source/less/blocks/cooperation.less
@@ -1,8 +1,11 @@
 .cooperation {
   display: flex;
+  justify-content: space-between;
 }
 
 .cooperation__heading {
+  width: 140px;
+  padding-top: 21px;
   font-size: 16px;
   line-height: 20px;
   font-weight: 200;
@@ -11,6 +14,8 @@
 }
 
 .cooperation__adds {
+  width: 140px;
+  padding-top: 7px;
   font-family: @font-family-content;
   font-size: 14px;
   line-height: 20px;
