--- a/source/less/blocks/catalog-main.less
+++ b/source/less/blocks/catalog-main.less
@@ -1,3 +1,33 @@
+.catalog-main {
+  width: 320px;
+  margin: 0 auto;
+}
+
+@media (min-width: @tablet-width) {
+  .catalog-main {
+    width: @tablet-width;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .catalog-main {
+    width: @desktop-width;
+  }
+}
+
 .catalog-main__heading-page {
   .title();
+  margin-left: 20px;
+}
+
+@media (min-width: @tablet-width) {
+  .catalog-main__heading-page {
+    margin-left: 30px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .catalog-main__heading-page {
+    margin-left: 110px;
+  }
 }
