--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,31 +1,72 @@
+.catalog {
+  width: 280px;
+  padding: 0 20px 0 20px;
+  margin: 0 auto;
+  outline: 1px solid blue;
+}
+
+@media (min-width: @tablet-width) {
+  .catalog {
+    width: 708px;
+    padding: 0 30px 0 30px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .catalog {
+    width: 1220px;
+    padding: 0 110px 0 110px;
+  }
+}
+
 .catalog__list {
   .reset-list();
+  outline: 1px solid green;
 }
 
 @media (min-width: @tablet-width) {
   .catalog__list {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
   }
 }
 
-.card-product__heading {
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 200;
-  color: @color-black;
+@media (min-width: @tablet-width) {
+  .catalog__item {
+    width: 324px;
+    min-height: 575px;
+    outline: 1px solid blue;
+  }
 }
 
-.card-product__product-characteristics {
-  font-family: @font-family-content;
-  font-size: 12px;
-  line-height: 16px;
-  font-weight: 200;
-  color: @color-grey;
+@media (min-width: @desktop-width) {
+  .catalog__item {
+    width: 245px;
+    min-height: 500px;
+    outline: 1px solid blue;
+  }
+}
+
+.catalog__additional-products {
+  margin-bottom: 39px;
+}
+
+.catalog__wrapper-additional-products {
+  width: 280px;
+  margin: 0 auto;
+}
+
+@media (min-width: @tablet-width) {
+  .catalog__wrapper-additional-products {
+    width: 708px;
+  }
 }
 
 @media (min-width: @desktop-width) {
   .catalog__wrapper-additional-products {
     display: flex;
+    justify-content: space-between;
+    width: 1220px;
   }
 }
