--- a/source/less/blocks/how-it-works.less
+++ b/source/less/blocks/how-it-works.less
@@ -2,21 +2,33 @@
   width: 280px;
   padding: 0 20px 0 20px;
   margin: 0 auto;
+  margin-bottom: 40px;
 }
 
 @media (min-width: @tablet-width) {
-  .how-it-works__list {
-    display: flex;
-    flex-wrap: wrap;
+  .how-it-works {
     width: 708px;
     padding: 0 30px 0 30px;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .how-it-works__list {
+  .how-it-works {
     width: 1220px;
     padding: 0 110px 0 110px;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .how-it-works__list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .how-it-works__list {
+    justify-content: space-between;
   }
 }
 
@@ -38,6 +50,19 @@
   font-family: @font-family-content;
 }
 
+@media (min-width: @tablet-width) {
+  .how-it-works__item {
+    width: 324px;
+    padding: 100px 0 0 0;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .how-it-works__item {
+    width: 245px;
+  }
+}
+
 .how-it-works__item:nth-child(1)::before {
   .how-it-works-icon();
   background-image: url("../img/advantage-leaf@1x.png");
@@ -56,4 +81,11 @@
 .how-it-works__item:nth-child(4)::before {
   .how-it-works-icon();
   background-image: url("../img/advantage-clock@1x.png");
+}
+
+@media (min-width: @tablet-width) {
+  .how-it-works__item::before {
+    width: 80px;
+    height: 80px;
+  }
 }
