--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,20 +1,27 @@
 .main-nav {
   position: relative;
-  width: 280px;
+  width: 320px;
   margin: 0 auto;
   border-top: 1px solid #e6e6e6;
 }
 
 @media (min-width: @tablet-width) {
   .main-nav {
+    width: 440px;
     border: none;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .main-nav {
+    width: 480px;
   }
 }
 
 .main-nav__toggle {
   position: absolute;
   top: -45px;
-  right: 2px;
+  right: 22px;
   z-index: 2;
   display: block;
   width: 24px;
@@ -37,7 +44,7 @@
 
 .main-nav--opened .main-nav__toggle {
   top: -45px;
-  right: 5px;
+  right: 25px;
 
   &::before,
   &::after {
