--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,8 +1,7 @@
 .page-header {
   display: flex;
   flex-direction: column;
-  width: 280px;
-  padding: 13px 20px 0 20px;
+  width: 320px;
   margin: 0 auto;
 }
 
@@ -11,14 +10,14 @@
     flex-direction: row;
     justify-content: space-between;
     width: 708px;
-    padding: 24px 30px 24px 30px;
+    padding: 0 30px 0 30px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .page-header {
     width: 1220px;
-    padding: 54px 110px 48px 110px;
+    padding: 0 110px 0 110px;
   }
 }
 
@@ -27,17 +26,22 @@
   justify-content: space-between;
   width: 190px;
   padding-bottom: 14px;
+  margin-left: 20px;
 }
 
 @media (min-width: @tablet-width) {
   .page-header__logo {
-    width: 173px;
+    width: 177px;
+    margin: 0;
+    padding: 0;
   }
 }
 
 @media (min-width: @desktop-width) {
   .page-header__logo {
-    width: 202px;
+    width: 208px;
+    margin: 0;
+    padding: 0;
   }
 }
 
