--- a/source/less/blocks/program-banner.less
+++ b/source/less/blocks/program-banner.less
@@ -13,6 +13,8 @@
   .program-banner {
     width: 708px;
     padding: 0 30px 0 30px;
+    background-image: none;
+    text-align: left;
   }
 }
 
@@ -30,6 +32,15 @@
   color: @color-white;
 }
 
+@media (min-width: @tablet-width) {
+  .program-banner__heading {
+    font-size: 60px;
+    line-height: 60px;
+    font-weight: 200;
+    color: @color-black;
+  }
+}
+
 .program-banner__slogan {
   margin-top: -5px;
   font-size: 14px;
@@ -39,8 +50,24 @@
   text-transform: uppercase;
 }
 
+@media (min-width: @tablet-width) {
+  .program-banner__slogan {
+    font-size: 20px;
+    line-height: 20px;
+    font-weight: 200;
+    color: @color-black;
+  }
+}
+
 .program-banner__product {
   margin: 25px 0 0 20px;
+}
+
+@media (min-width: @tablet-width) {
+  .program-banner__product {
+    width: 709px;
+    height: 609px;
+  }
 }
 
 .program-banner__button {
@@ -56,5 +83,10 @@
 @media (min-width: @tablet-width) {
   .program-banner__button {
     order: 0;
+    align-self: flex-start;
+    padding: 17px 29px 15px 26px;
+    margin: 0;
+    font-size: 20px;
+    line-height: 20px;
   }
 }
