--- a/source/less/blocks/real-example.less
+++ b/source/less/blocks/real-example.less
@@ -1,15 +1,51 @@
 .real-example {
+  margin: 0 auto;
   background-color: @color-light-grey;
 }
 
 @media (min-width: @desktop-width) {
   .real-example {
     display: flex;
+    background-color: @color-white;
+    background-image: linear-gradient(#ffffff 300px, #f2f2f2 300px);
+  }
+}
+
+.real-example__history {
+  width: 280px;
+  padding: 0 20px 0 20px;
+  margin: 0 auto;
+}
+
+@media (min-width: @tablet-width) {
+  .real-example__history {
+    width: 708px;
+    padding: 0 30px 0 30px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .real-example__history {
+    width: 1220px;
+    padding: 0 110px 0 110px;
   }
 }
 
 .real-example__heading {
   .title();
+  padding: 18px 0 0 0;
+  margin: 0;
+}
+
+.real-example__text {
+  .content-font();
+  display: block;
+  padding: 10px 5px 0 0;
+  font-family: @font-family-content;
+}
+
+.real-example__galery {
+  width: 320px;
 }
 
 @media (min-width: @tablet-width) {
@@ -23,11 +59,6 @@
     display: flex;
     flex-direction: column;
   }
-}
-
-.real-example__text {
-  .content-font();
-  font-family: @font-family-content;
 }
 
 .real-example__stats {
