--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,5 +1,7 @@
 .site-list {
   .reset-list();
+  width: 320px;
+  margin: 0 auto;
 }
 
 @media (min-width: @tablet-width) {
@@ -7,7 +9,13 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    width: 439px;
+    width: 440px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .site-list {
+    width: 480px;
   }
 }
 
@@ -24,7 +32,7 @@
 
 @media (min-width: @tablet-width) {
   .site-list__link {
-    padding: 20px 0 5px 0;
+    padding: 0;
     font-size: 18px;
     line-height: 25px;
     font-weight: 200;
@@ -40,6 +48,9 @@
 
 @media (min-width: @tablet-width) {
   .site-list__item {
+    margin: 0;
+    padding: 0;
+    text-align: left;
     border: none;
   }
 }
