--- a/source/less/style.less
+++ b/source/less/style.less
@@ -19,6 +19,7 @@
 @import "blocks/copyright";
 @import "blocks/catalog-main";
 @import "blocks/catalog";
+@import "blocks/card-product";
 @import "blocks/more-products";
 @import "blocks/additional-products";
 @import "blocks/promo";
