--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -85,6 +85,9 @@
   .additional-products__field {
     width: 192px;
   }
+}
+
+@media (min-width: @tablet-width) {
   .additional-products__field {
     width: 132px;
   }
