Оборачивает инпуты в лейблы

--- a/source/less/blocks/program-form-main.less
+++ b/source/less/blocks/program-form-main.less
@@ -1,3 +1,9 @@
+.program-form-main {
+  width: 320px;
+  margin: 0 auto;
+}
+
 .program-form-main__heading-page {
-  .title;
+  .title();
+  margin-left: 20px;
 }
