--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,4 +1,4 @@
-.main-nav {
+.main-nav__list {
   position: relative;
   width: 320px;
   margin: 0 auto;
@@ -6,22 +6,22 @@
 }
 
 @media (min-width: @tablet-width) {
-  .main-nav {
+  .main-nav__list {
     width: 440px;
     border: none;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .main-nav {
+  .main-nav__list {
     width: 480px;
   }
 }
 
 .main-nav__toggle {
   position: absolute;
-  top: -45px;
-  right: 22px;
+  top: 10px;
+  right: 60px;
   z-index: 2;
   display: block;
   width: 24px;
@@ -43,8 +43,8 @@
 }
 
 .main-nav--opened .main-nav__toggle {
-  top: -45px;
-  right: 25px;
+  top: 10px;
+  right: 65px;
 
   &::before,
   &::after {
