--- a/source/less/blocks/picking-program.less
+++ b/source/less/blocks/picking-program.less
@@ -1,4 +1,10 @@
+.picking-program {
+  width: 280 px;
+  padding: 0 20px 0 20px;
+}
+
 .picking-program__text {
+  width: 235px;
   font-size: 14px;
   line-height: 18px;
   font-weight: 200;
