--- a/source/less/style.less
+++ b/source/less/style.less
@@ -5,6 +5,7 @@
 @import "global/mixins";
 @import "blocks/button";
 @import "blocks/label";
+@import "blocks/desktop-header-background";
 @import "blocks/page-header";
 @import "blocks/main-nav";
 @import "blocks/site-list";
