--- a/source/less/blocks/label.less
+++ b/source/less/blocks/label.less
@@ -5,3 +5,10 @@
   color: #222222;
   text-transform: uppercase;
 }
+
+.input {
+  box-sizing: border-box;
+  flex-grow: 1;
+  padding: 15px 5px 15px 15px;
+  border: 1px solid #e6e6e6;
+}
