Дорабатывает поля формы, лейблы не переносятся

--- a/source/less/blocks/picking-program.less
+++ b/source/less/blocks/picking-program.less
@@ -36,7 +36,11 @@
 .picking-program__label {
   display: flex;
   align-items: baseline;
-  width: 100%;
+}
+
+.picking-program__label span {
+  flex-shrink: 0;
+  margin-right: 10px;
 }
 
 .picking-program__label-toogle {
