--- a/source/less/blocks/label.less
+++ b/source/less/blocks/label.less
@@ -8,7 +8,8 @@
 
 .input {
   box-sizing: border-box;
-  flex-grow: 1;
+  width: 100%;
+  flex-shrink: 1;
   padding: 15px 5px 15px 15px;
   border: 1px solid #e6e6e6;
 }
