Черновая разметка слайдера на мобильной версии

--- a/source/less/blocks/program-form-main.less
+++ b/source/less/blocks/program-form-main.less
@@ -3,6 +3,18 @@
   margin: 0 auto;
 }
 
+@media (min-width: @tablet-width) {
+  .picking-program {
+    width: 768px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .picking-program {
+    width: 1440px;
+  }
+}
+
 .program-form-main__heading-page {
   .title();
   margin-left: 20px;
