--- a/source/less/blocks/picking-program.less
+++ b/source/less/blocks/picking-program.less
@@ -3,6 +3,20 @@
   padding: 0 20px 0 20px;
 }
 
+@media (min-width: @tablet-width) {
+  .picking-program {
+    width: 708px;
+    padding: 0 30px 0 30px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .picking-program {
+    width: 1220px;
+    padding: 0 110px 0 110px;
+  }
+}
+
 .picking-program__text {
   width: 235px;
   font-size: 14px;
