--- a/source/less/blocks/real-example.less
+++ b/source/less/blocks/real-example.less
@@ -44,10 +44,6 @@
   font-family: @font-family-content;
 }
 
-.real-example__galery {
-  width: 320px;
-}
-
 @media (min-width: @tablet-width) {
   .real-example__wrapper-stats {
     display: flex;
@@ -62,31 +58,92 @@
 }
 
 .real-example__stats {
+  display: flex;
+  justify-content: space-between;
   padding: 0;
   margin: 0;
 }
 
 .real-example__value {
+  display: block;
+  width: 125px;
+  padding: 15px 0 15px 0;
   font-size: 24px;
   line-height: 24px;
   font-weight: 200;
   text-transform: uppercase;
+  text-align: center;
+  border: 1px solid #cfcfcf;
+  border-radius: 2px;
 }
 
 .real-example__field {
+  display: block;
+  width: 100px;
+  padding: 0;
+  margin: -10px 0 0 15px;
+  font-family: @font-family-content;
   font-size: 12px;
   line-height: 12px;
   font-weight: 200;
   color: @color-grey;
-  padding: 0;
-  margin: 0;
+  text-transform: lowercase;
+  text-align: center;
+  background-color: @color-light-grey;
 }
 
 .real-example__totals {
+  display: block;
+  margin-left: 8px;
   font-size: 14px;
   line-height: 20px;
   font-weight: 200;
   text-transform: uppercase;
+  text-align: center;
+}
+
+.real-example__galery {
+  width: 320px;
+  margin: 0 auto;
+  outline: 3px solid red;
+}
+
+.real-example__list {
+  position: relative;
+  min-height: 270px;
+}
+
+.real-example__item {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: @color-light-grey;
+}
+
+.real-example__item:nth-child(2) {
+  z-index: 1;
+}
+
+.real-example__controls {
+  display: flex;
+}
+
+.real-example__toogls {
+  display: flex;
+  justify-content: space-between;
+  width: 72px;
+  padding: 4px 6px 4px 6px;
+  border: 1px solid #cfcfcf;
+  border-radius: 10px;
+}
+
+.real-example__toogle-beaore,
+.real-example__toogle-after {
+  width: 35px;
+  height: 6px;
+  margin: auto 0;
+  background-color: @color-green;
+  border-radius: 10px;
 }
 
 .real-example__scale-before,
@@ -95,4 +152,5 @@
   line-height: 20px;
   font-weight: 200;
   text-transform: uppercase;
+  cursor: pointer;
 }
