--- a/source/less/blocks/program-form-main.less
+++ b/source/less/blocks/program-form-main.less
@@ -3,19 +3,19 @@
   margin: 0 auto;
 }
 
+.program-form-main__heading-page {
+  .title();
+  margin-left: 20px;
+}
+
 @media (min-width: @tablet-width) {
-  .picking-program {
-    width: 768px;
+  .program-form-main {
+    width: @tablet-width;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .picking-program {
-    width: 1440px;
+  .program-form-main {
+    width: @desktop-width;
   }
-}
-
-.program-form-main__heading-page {
-  .title();
-  margin-left: 20px;
 }
