--- a/source/less/blocks/label.less
+++ b/source/less/blocks/label.less
@@ -1,7 +1,6 @@
 .label {
+  font-family: @font-family-base;
   font-size: 16px;
-  line-height: 18px;
-  font-weight: 200;
   color: #222222;
   text-transform: uppercase;
 }
