--- a/source/less/global/commons.less
+++ b/source/less/global/commons.less
@@ -3,7 +3,11 @@ body {
   min-width: 320px;
   margin: 0;
   padding: 0;
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: @font-family-content;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  color: @color-grey;
 }
 
 img {
