Поправляет паддинг для десктопа

--- a/source/less/blocks/card-product.less
+++ b/source/less/blocks/card-product.less
@@ -1,16 +1,13 @@
 .card-product__heading {
+  font-family: @font-family-base;
   font-size: 16px;
   line-height: 20px;
-  font-weight: 200;
   color: @color-black;
 }
 
 .card-product__product-characteristics {
-  font-family: @font-family-content;
   font-size: 12px;
   line-height: 16px;
-  font-weight: 200;
-  color: @color-grey;
 }
 
 .card-product__button {
