--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -1,13 +1,7 @@
-@media (min-width: @desktop-width) {
-  .additional-products {
-    width: 895px;
-  }
-}
-
 .additional-products__title {
+  font-family: @font-family-base;
   font-size: 24px;
   line-height: 24px;
-  font-weight: 200;
   color: @color-black;
 }
 
@@ -24,9 +18,9 @@
 }
 
 .additional-products__heading {
+  font-family: @font-family-base;
   font-size: 16px;
   line-height: 16px;
-  font-weight: 200;
   color: #222222;
   text-transform: uppercase;
 }
@@ -40,10 +34,8 @@
   text-decoration: none;
 }
 
-@media (min-width: @desktop-width) {
-  .additional-products__button {
-    width: 245px;
-  }
+.additional-products__characteristics {
+  line-height: 14px;
 }
 
 @media (min-width: @tablet-width) {
@@ -51,44 +43,36 @@
     display: flex;
     justify-content: space-between;
   }
-}
 
-@media (min-width: @desktop-width) {
-  .additional-products__item {
-    display: flex;
-    justify-content: space-between;
-  }
-}
-
-@media (min-width: @tablet-width) {
   .additional-products__heading {
     width: 285px;
   }
-}
 
-.additional-products__characteristics {
-  font-family: @font-family-content;
-  font-size: 14px;
-  line-height: 14px;
-  font-weight: 200;
-  color: @color-grey;
-}
-
-@media (min-width: @tablet-width) {
   .additional-products__characteristics td {
     padding-top: 17px;
     text-align: right;
   }
-}
 
-@media (min-width: @tablet-width) {
   .additional-products__field {
-    width: 192px;
+    width: 132px;
   }
 }
 
-@media (min-width: @tablet-width) {
+@media (min-width: @desktop-width) {
+  .additional-products {
+    width: 895px;
+  }
+
+  .additional-products__button {
+    width: 245px;
+  }
+
+  .additional-products__item {
+    display: flex;
+    justify-content: space-between;
+  }
+
   .additional-products__field {
-    width: 132px;
+    width: 192px;
   }
 }
