--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -8,15 +8,15 @@
   margin: 0 auto;
 }
 
+.contacts__map {
+  width: 100%;
+  margin: 0 auto;
+}
+
 @media (min-width: @tablet-width) {
   .contacts__cooperation {
     width: 708px;
     padding: 0 30px 0 30px;
     margin: 0 auto;
   }
-}
-
-.contacts__map {
-  width: 320px;
-  margin: 0 auto;
 }
