--- a/source/less/blocks/cooperation.less
+++ b/source/less/blocks/cooperation.less
@@ -6,9 +6,9 @@
 .cooperation__heading {
   width: 140px;
   padding-top: 21px;
+  font-family: @font-family-base;
   font-size: 16px;
   line-height: 20px;
-  font-weight: 200;
   color: @color-black;
   text-transform: uppercase;
 }
@@ -16,9 +16,5 @@
 .cooperation__adds {
   width: 140px;
   padding-top: 7px;
-  font-family: @font-family-content;
-  font-size: 14px;
   line-height: 20px;
-  font-weight: 200;
-  color: @color-grey;
 }
