--- a/source/less/global/mixins.less
+++ b/source/less/global/mixins.less
@@ -8,22 +8,17 @@
 }
 
 .title() {
+  font-family: @font-family-base;
   font-size: 36px;
   line-height: 60px;
   font-weight: 200;
+  color: @color-black;
 }
 
 .reset-list() {
   padding: 0;
   margin: 0;
   list-style: none;
-}
-
-.content-font() {
-  font-size: 14px;
-  line-height: 18px;
-  font-weight: 200;
-  color: #444444;
 }
 
 .how-it-works-icon() {
