Поправляет позиционирование гамбургера в моб.версии

--- a/source/less/blocks/real-example.less
+++ b/source/less/blocks/real-example.less
@@ -55,6 +55,7 @@
 .real-example__totals {
   display: block;
   margin-left: 8px;
+  font-family: @font-family-base;
   line-height: 20px;
   text-transform: uppercase;
   text-align: center;
