--- a/source/less/blocks/card-product.less
+++ b/source/less/blocks/card-product.less
@@ -23,7 +23,7 @@
   }
 }
 
-@media (min-width: @tablet-width) {
+@media (min-width: @desktop-width) {
   .card-product__button {
     width: 170px;
   }
