--- a/source/less/blocks/categories.less
+++ b/source/less/blocks/categories.less
@@ -6,7 +6,6 @@
 
 .categories__list {
   .reset-list();
-  position: relative;
 }
 
 .categories__item {
@@ -15,10 +14,12 @@
 
 
 .categories__heading {
+  position: relative;
   padding: 30px 0 0 91px;
   font-family: @font-family-base;
   font-size: 24px;
   line-height: 37px;
+  font-weight: 400;
   color: @color-black;
   text-transform: uppercase;
 }
