--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,5 +1,8 @@
-.main-nav__list {
+.main-nav {
   position: relative;
+}
+
+.main-nav__list {
   width: 320px;
   margin: 0 auto;
   border-top: 1px solid #e6e6e6;
@@ -7,8 +10,8 @@
 
 .main-nav__toggle {
   position: absolute;
-  top: 10px;
-  right: 60px;
+  top: -21px;
+  right: 10px;
   z-index: 2;
   display: block;
   width: 24px;
@@ -21,8 +24,8 @@
 .main-nav--closed .main-nav__toggle::before {
   content: "";
   position: absolute;
-  top: 0;
-  right: 0;
+  top: -21px;
+  right: 10px;
   width: 24px;
   height: 2px;
   background-color: @color-black;
@@ -30,8 +33,8 @@
 }
 
 .main-nav--opened .main-nav__toggle {
-  top: 10px;
-  right: 65px;
+  top: 0;
+  right: 0;
 
   &::before,
   &::after {
