--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -9,8 +9,7 @@
   display: flex;
   justify-content: space-between;
   width: 190px;
-  padding-bottom: 14px;
-  margin-left: 20px;
+  margin: 11px 0 16px 20px;
 }
 
 .page-header__logo-image-icon {
@@ -21,7 +20,7 @@
 .page-header__logo-image-name {
   width: 101px;
   height: 18px;
-  align-self: center;
+  padding-top: 12px;
 }
 
 @media (min-width: @tablet-width) {
