--- a/source/less/blocks/program-banner.less
+++ b/source/less/blocks/program-banner.less
@@ -13,6 +13,7 @@
   font-family: @font-family-base;
   font-size: 36px;
   line-height: 36px;
+  font-weight: 400;
   color: @color-white;
 }
 
@@ -20,6 +21,7 @@
   margin-top: -5px;
   line-height: 14px;
   font-family: @font-family-base;
+  font-weight: 400;
   color: @color-white;
   text-transform: uppercase;
 }
